# casquinha

./: .gitignore  Makefile  NOTES.md  README.md
Resources/: Casquinha.icns
design/: AUDIT-backend-exhaustion.md  CUSHION-PHYSICS.md  FREEZE-AUDIT-b59.md  PATTERN-MAP-os9.md  RESILIENCE-ROADMAP.md  SPEC-burst.md  SPEC-play-from.md
logs/: .gitignore  freeze-evidence-b59-b61.md
os9/: CMakeLists.txt  casquinha.c  casquinha.r  icon.r
src/: cq_backoff.c  cq_backoff.h  cq_cache.c  cq_cache.h  cq_codec.c  cq_codec.h  cq_debounce.c  cq_debounce.h  cq_decring.c  cq_decring.h  cq_guard.c  cq_guard.h  cq_mp3.c  cq_mp3.h  cq_mp3dec.c  cq_mp3dec.h  cq_now.c  cq_now.h  cq_pls.c  cq_pls.h  cq_reflist.c  cq_reflist.h  cq_track.c  cq_track.h  cq_transport.h  cq_transport_ot.c  cq_transport_posix.c  cq_view.c  cq_view.h
tests/: backoff_test.c  cache_test.c  codec_test.c  cq_test.c  cq_test.h  debounce_test.c  decring_test.c  guard_test.c  mp3_test.c  mp3dec_test.c  now_test.c  pls_test.c  reflist_test.c  run_tests.c  track_test.c  transport_test.c  view_test.c
tests/Fixtures/: stream.pls
tools/: Collect Logs.applescript  Test Casquinha.applescript  gen_icons.py  loglisten.py  make_icns.py  mp3scan.c  nano_edit.py  probe.c
